Refactor DIP explanation for clarity

--- a/computer science related/software engineering/dip.ipynb
+++ b/computer science related/software engineering/dip.ipynb
@@ -20,7 +20,7 @@
     "- Fragile coupling — changes in low‑level code breaking high‑level logic.\n",
     "- Rigid architectures — adding new implementations requires modifying high‑level modules.\n",
     "- Leaky abstractions — high‑level modules knowing too much about implementation details.\n",
-    "For someone like you, Dominic—who cares deeply about structural stability, domain boundaries, and explicit abstractions—DIP is basically the architectural guardrail that ensures your domain layer never leaks into infrastructure.\n",
+    "DIP is basically the architectural guardrail that ensures your domain layer never leaks into infrastructure.\n",
     "\n",
     "## references\n",
     "- https://en.wikipedia.org/wiki/Dependency_inversion_principle"
