Update tree definition in tree.ipynb
Removed mention of subtrees from tree definition.

--- a/computer science related/data structure and algorithm/data structure/tree.ipynb
+++ b/computer science related/data structure and algorithm/data structure/tree.ipynb
@@ -9,8 +9,7 @@
     "A tree is a hierarchical, acyclic structure with:\n",
     "- a root\n",
     "- parent-child relationships\n",
-    "- subtrees\n",
-    "- depth and height\n",
+    "- one parent except the root\n",
     "\n",
     "## Why trees exist\n",
     "Trees encode hierarchy, sorted order, and search structure.\n",
