Remove obsolete Trie example from Tree additional.py and reorganize tree.ipynb for clarity

--- a/computer science related/data structure and algorithm/data structure/tree.ipynb
+++ b/computer science related/data structure and algorithm/data structure/tree.ipynb
@@ -43,36 +43,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f812cefe",
+   "metadata": {},
+   "source": [
+    "References:\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Tree_(abstract_data_type)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "42f6dcea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "task1\n",
-      "task2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Minimal binary tree node\n",
     "class Node:\n",
     "    def __init__(self, v):\n",
     "        self.v = v\n",
     "        self.left = None\n",
-    "        self.right = None\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "93ff5c59",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "        self.right = None\n",
+    "\n",
     "# Insert into a BST\n",
     "def insert(root, x):\n",
     "    if root is None:\n",
@@ -81,16 +74,8 @@
     "        root.left = insert(root.left, x)\n",
     "    else:\n",
     "        root.right = insert(root.right, x)\n",
-    "    return root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e679991b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return root\n",
+    "\n",
     "# Inorder traversal (sorted output)\n",
     "def inorder(root):\n",
     "    if root:\n",
@@ -101,7 +86,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "d794899a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = Node(5)\n",
+    "insert(root, 3)\n",
+    "insert(root, 7)\n",
+    "insert(root, 4)\n",
+    "\n",
+    "for i in inorder(root): \n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4b39689d",
+   "metadata": {},
+   "source": [
+    "### tries \n",
+    "\n",
+    "```text\n",
+    "root\n",
+    " └── 'c'\n",
+    "      └── 'a'\n",
+    "           ├── 't' (end=True)\n",
+    "           └── 'r' (end=True)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "de6cd54b",
    "metadata": {},
    "outputs": [],
@@ -116,7 +144,38 @@
     "    node = root\n",
     "    for ch in word:\n",
     "        node = node.children.setdefault(ch, TrieNode())\n",
-    "    node.end = True\n"
+    "    node.end = True\n",
+    "\n",
+    "def search(root, word):\n",
+    "    node = root\n",
+    "    for ch in word:\n",
+    "        if ch not in node.children:\n",
+    "            return False\n",
+    "        node = node.children[ch]\n",
+    "    return node.end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "4e2c8b2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "root = TrieNode()\n",
+    "insert(root, \"cat\")\n",
+    "insert(root, \"car\")\n",
+    "insert(root, \"cart\")\n",
+    "\n",
+    "print(search(root, \"car\"))  # True"
    ]
   }
  ],
