--- a/computer science related/data structure and algorithm/data structure/search.ipynb
+++ b/computer science related/data structure and algorithm/data structure/search.ipynb
@@ -27,25 +27,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "83c37d69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "## Example A: Linear search\n",
     "def linear_search(a, x):\n",
     "    for i, v in enumerate(a):\n",
     "        if v == x:\n",
     "            return i\n",
-    "    return -1\n"
+    "    return -1\n",
+    "\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "x = 3\n",
+    "print(linear_search(a, x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "39f1844d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Example B: Binary search\n",
@@ -59,15 +79,45 @@
     "            lo = mid + 1\n",
     "        else:\n",
     "            hi = mid - 1\n",
-    "    return -1\n"
+    "    return -1\n",
+    "\n",
+    "a = [1, 10, 20, 30, 40, 50]\n",
+    "x = 30\n",
+    "print(binary_search(a, x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b81a5532",
+   "execution_count": 4,
+   "id": "1ac47703",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "graph = {\n",
+    "    \"fastapi\": [\"pydantic\", \"starlette\"],\n",
+    "    \"pydantic\": [\"typing-extensions\"],\n",
+    "    \"starlette\": [\"typing-extensions\"],\n",
+    "    \"typing-extensions\": []\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "b81a5532",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fastapi\n",
+      "pydantic\n",
+      "starlette\n",
+      "typing-extensions\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Example C: BFS (queue-based)\n",
@@ -83,15 +133,85 @@
     "        for nxt in graph[node]:\n",
     "            if nxt not in seen:\n",
     "                seen.add(nxt)\n",
-    "                q.append(nxt)\n"
+    "                q.append(nxt)\n",
+    "\n",
+    "for node in bfs(graph, \"fastapi\"):\n",
+    "    print(node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "e174afa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "queue=['fastapi'], seen={'fastapi'}\n",
+      "visit -> fastapi\n",
+      "output: fastapi\n",
+      "  enqueue pydantic\n",
+      "  enqueue starlette\n",
+      "\n",
+      "queue=['pydantic', 'starlette'], seen={'starlette', 'pydantic', 'fastapi'}\n",
+      "visit -> pydantic\n",
+      "output: pydantic\n",
+      "  enqueue typing-extensions\n",
+      "\n",
+      "queue=['starlette', 'typing-extensions'], seen={'typing-extensions', 'starlette', 'pydantic', 'fastapi'}\n",
+      "visit -> starlette\n",
+      "output: starlette\n",
+      "\n",
+      "queue=['typing-extensions'], seen={'typing-extensions', 'starlette', 'pydantic', 'fastapi'}\n",
+      "visit -> typing-extensions\n",
+      "output: typing-extensions\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Example C: BFS (queue-based) with debug prints\n",
+    "from collections import deque\n",
+    "\n",
+    "def bfs(graph, start):\n",
+    "    q = deque([start])\n",
+    "    seen = {start}\n",
+    "\n",
+    "    while q:\n",
+    "        print(f\"queue={list(q)}, seen={seen}\")\n",
+    "        node = q.popleft()\n",
+    "        print(f\"visit -> {node}\")\n",
+    "        yield node\n",
+    "        for nxt in graph[node]:\n",
+    "            if nxt not in seen:\n",
+    "                print(f\"  enqueue {nxt}\")\n",
+    "                seen.add(nxt)\n",
+    "                q.append(nxt)\n",
+    "        print()\n",
+    "\n",
+    "for node in bfs(graph, \"fastapi\"):\n",
+    "    print(\"output:\", node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "2e7669d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fastapi\n",
+      "pydantic\n",
+      "typing-extensions\n",
+      "starlette\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "## Example D: DFS (recursive)\n",
@@ -102,7 +222,10 @@
     "    yield node\n",
     "    for nxt in graph[node]:\n",
     "        if nxt not in seen:\n",
-    "            yield from dfs(graph, nxt, seen)"
+    "            yield from dfs(graph, nxt, seen)\n",
+    "\n",
+    "for node in dfs(graph, \"fastapi\"):\n",
+    "    print(node)"
    ]
   },
   {
@@ -115,8 +238,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
   }
  },
  "nbformat": 4,
