Add example for using multiple columns and previous rows with Numba

--- a/c_related/numba_examples/numba_scicomp.ipynb
+++ b/c_related/numba_examples/numba_scicomp.ipynb
@@ -340,6 +340,67 @@
     "\n",
     "csv_path"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61d8730e",
+   "metadata": {},
+   "source": [
+    "## Using data from multiple columns and previous rows\n",
+    "Numba cannot operate on pandas `DataFrame` directly—convert to contiguous NumPy arrays and pass columns together. You can reference previous rows explicitly inside the loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fbdc1c5",
+   "metadata": {
+    "vscode": {
+     "languageId": "code"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Sample dataframe\n",
+    "_df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"price\": np.linspace(100, 110, 10) + np.random.randn(10),\n",
+    "        \"volume\": np.random.randint(80, 120, size=10),\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "# Convert to contiguous NumPy array (float64) with both columns\n",
+    "arr = np.ascontiguousarray(_df[[\"price\", \"volume\"]].to_numpy(np.float64))\n",
+    "\n",
+    "\n",
+    "@nb.njit\n",
+    "def rolling_signal(arr2d: np.ndarray, threshold: float = 0.6) -> np.ndarray:\n",
+    "    \"\"\"\n",
+    "    Example of using multiple columns and previous rows.\n",
+    "    - Column 0: price, Column 1: volume\n",
+    "    - Increase a running score when price jumps vs prior row AND volume is high\n",
+    "    - Decay the score otherwise\n",
+    "    \"\"\"\n",
+    "    n = arr2d.shape[0]\n",
+    "    out = np.empty(n, dtype=np.float64)\n",
+    "    carry = 0.0\n",
+    "    for i in range(n):\n",
+    "        price = arr2d[i, 0]\n",
+    "        volume = arr2d[i, 1]\n",
+    "        prev_price = arr2d[i - 1, 0] if i > 0 else price\n",
+    "        if abs(price - prev_price) > threshold and volume > 90.0:\n",
+    "            carry += 1.0\n",
+    "        else:\n",
+    "            carry *= 0.9\n",
+    "        out[i] = carry\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "_df[\"signal\"] = rolling_signal(arr, threshold=0.6)\n",
+    "_df.head()"
+   ]
   }
  ],
  "metadata": {
